<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".ui.Reward.Profile.RewardProfilePageFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/IV_Navigate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/CD"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_navigate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/TV_MyProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/MP"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/IV_Navigate"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/TV_TamilGuru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Tittle"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/IV_Crown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/CD"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_crown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/RoundCardView_Photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/homeScreen"
        app:cardCornerRadius="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/IV_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/CD"
                android:src="@drawable/ic_camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/TV_Profile_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/KidName"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RoundCardView_Photo" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_1"
        android:backgroundTint="@color/green"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_Profile_Name">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/IV_Coins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/CD"
                android:src="@drawable/ic_coins"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/TV_TotalCoins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="24dp"
                android:text="@string/HC"
                android:textColor="@color/white"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/TV_CoinEarned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/CE"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/TV_TotalCoins"
                app:layout_constraintTop_toBottomOf="@+id/TV_TotalCoins"
                tools:ignore="TextContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/IV_Share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/CD"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/ic_share_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_TamilGuru" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/TV_GamesWonScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/GWS"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/TV_Stars_Score"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/TV_Stars_Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/StarsScore"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/TV_Question_Attend"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/TV_GamesWonScore"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/TV_Question_Attend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/TotalQuestions"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/TV_Stars_Score"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/TV_GamesWon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/GW"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/TV_GamesWonScore"
        app:layout_constraintStart_toStartOf="@+id/TV_GamesWonScore"
        app:layout_constraintTop_toBottomOf="@+id/TV_GamesWonScore" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/TV_Stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/Stars"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/TV_Stars_Score"
        app:layout_constraintStart_toStartOf="@+id/TV_Stars_Score"
        app:layout_constraintTop_toBottomOf="@+id/TV_Stars_Score" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/TV_Questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/Questions"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/TV_Question_Attend"
        app:layout_constraintStart_toStartOf="@+id/TV_Question_Attend"
        app:layout_constraintTop_toBottomOf="@+id/TV_Question_Attend" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/IV_GamesWonScore_Trophy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/CD"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_trophy_icon"
        app:layout_constraintEnd_toEndOf="@+id/TV_GamesWon"
        app:layout_constraintStart_toStartOf="@+id/TV_GamesWon"
        app:layout_constraintTop_toBottomOf="@+id/TV_GamesWon" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/IV_Stars_Trophy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/CD"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_trophy_icon"
        app:layout_constraintEnd_toEndOf="@+id/TV_Stars"
        app:layout_constraintStart_toStartOf="@+id/TV_Stars"
        app:layout_constraintTop_toBottomOf="@+id/TV_Stars" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/IV_Questions_Trophy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/CD"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_trophy_icon"
        app:layout_constraintEnd_toEndOf="@+id/TV_Questions"
        app:layout_constraintStart_toStartOf="@+id/TV_Questions"
        app:layout_constraintTop_toBottomOf="@+id/TV_Questions" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/TV_Badges_List"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:text="@string/BW"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IV_Stars_Trophy" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/IV_InitialBadge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/CD"
        android:src="@drawable/ic_initial_badge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_Badges_List"
        tools:ignore="ImageContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>