<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_margin="20dp"
    android:layout_gravity="center"
    app:cardCornerRadius="50dp"
    tools:context=".ui.Reward.RewardPageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rewardpagelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp">

        <nl.dionsegijn.konfetti.KonfettiView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/celebrationView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/IV_Gigna"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_paper"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/CD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/IV_RewardCoins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/CD"
            android:src="@drawable/ic_coins"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/TV_GreatStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="@string/GS"
            android:textColor="@color/background"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/IV_RewardCoins" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/TV_YouHaveWon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="@string/YHW"
            android:textColor="@color/background"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TV_GreatStart" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/TV_ProfileCompleteRewardCoins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="@string/RC"
            android:textColor="@color/green"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TV_YouHaveWon"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/TV_Reward_Coins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="@string/Coin"
            android:textColor="@color/background"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TV_ProfileCompleteRewardCoins" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
